# crdm-tools

./: .gitignore  .pre-commit-config.yaml  Makefile  NOTICE  README.md  docker-compose.prod.yml  docker-compose.yml  prefect.yaml  pyproject.toml  template.env
.github/linters/: check_headers_exist.sh
.github/workflows/: docker-build.yml  makefile-check.yml  precommit.yaml  prefect-flow-tests.yml  prefect-makefile-check.yml
docker/: Dockerfile  README.md  omop-cascade.sh  omop_es.sh
env/: Dockerfile  template.env
env/app/: entrypoint.sh
omop-cascade/: Dockerfile  template.env
omop-cascade/app/: entrypoint.sh  test_libraries.R
omop-cascade/app/conf/: .gitignore
omop-cascade/app/ddl/: .gitignore
omop-cascade/app/extra/: .gitignore
omop-cascade/app/vocab/: .gitignore
omop_es/: Dockerfile  template.env
omop_es/app/: entrypoint.sh  test_libraries.R
prefect/: Makefile  README.md  prefect.yaml  pyproject.toml  run_docker.py  run_omop_es.py  run_subprocess.py  template.env  test_git_utilities.py  test_run_omop_es.py  test_subprocess_utilities.py
