#  Copyright (c) University College London Hospitals NHS Foundation Trust
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
################################################################################

[project]
name = "omop_es-prefect"
version = "0.1.0"
description = "Workflow scheduling with prefect"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "dotenv>=0.9.9",
    "prefect>=3.1.14",
]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-freezer>=0.4.9",
    "pytest-mock>=3.14.0",
]
